--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@
 
 .idea
 build
-gradle
+.gradle/*/*.*
 *.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
