--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ lombokdemo/out
 build
 .gradle/*/*.*
 *.iml
+simpleprocessor/out
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
