--- a/simpleprocessorchecks/build.gradle
+++ b/simpleprocessorchecks/build.gradle
@@ -1,15 +1,14 @@
 apply plugin: 'java'
 
 repositories {
+    mavenLocal()
     jcenter()
     maven { url "https://clojars.org/repo" }
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    compileOnly 'com.steammachine.org:simple.annotation.processors:0.8.2'
+    compileOnly 'com.steammachine.org:simple.annotation.processors:0.8.3'
 }
 
-task buildchecks {
-    dependsOn 'build'
-}
+task buildchecks(dependsOn: 'build')
