--- a/simpleprocessorchecks/build.gradle
+++ b/simpleprocessorchecks/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'java'
 
 repositories {
     jcenter()
+    mavenLocal()
     maven { url "https://clojars.org/repo" }
 }
 
 dependencies {
     testCompile 'junit:junit:4.12'
-    compileOnly 'com.steammachine.org:simple.annotation.processors:0.8.2'
+    compileOnly 'com.steammachine.org:simple.annotation.processors:0.8.3'
+    compile 'org.kohsuke.metainf-services:metainf-services:1.1'
 }
 
-task buildchecks {
-    dependsOn 'build'
-}
+task buildchecks(dependsOn: 'build')
+
