--- a/simpleprocessorchecks/build.gradle
+++ b/simpleprocessorchecks/build.gradle
@@ -10,7 +10,7 @@ repositories {
 dependencies {
     testCompile 'junit:junit:4.12'
     compileOnly 'com.steammachine.org:simple.annotation.processors:0.8.3'
-    compile 'org.kohsuke.metainf-services:metainf-services:1.1'
+//    compile 'org.kohsuke.metainf-services:metainf-services:1.1'
 }
 
 task buildchecks(dependsOn: 'build')
